Corregido obtencion de hora actual en entornos en UTC